fix: Approve api
